--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://10.113.255.228:13306/pdeDB?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=pde
+spring.datasource.password=EKEKdmdm405!
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
