--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
+## Spring DATASOURCE
 spring.datasource.url=jdbc:mysql://10.113.255.228:13306/pdeDB2?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=pde
 spring.datasource.password=EKEKdmdm405!
+
+## Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+
