--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,13 @@ spring.datasource.password=EKEKdmdm405!
 
 ## Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+## Security Settings
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+spring.mvc.log-request-details=true
+spring.output.ansi.enabled=ALWAYS
 
 
 
