--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.password=EKEKdmdm405!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-## Security Settings
+spring.cache.type=NONE
+
+## Debugging Settings
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 spring.mvc.log-request-details=true
