--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.cache.type=NONE
 
+server.port=8081
+
 ## Debugging Settings
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
